snake's body changes direction well;